--- a/config.json
+++ b/config.json
@@ -3,5 +3,5 @@
   "short_description": "Self custody Bolt Cards with one time LNURLw",
   "tile": "/boltcards/static/image/boltcard.png",
   "contributors": ["iwarpbtc", "arcbtc", "leesalminen"],
-  "min_lnbits_version": "0.XX.0"
+  "min_lnbits_version": "0.11.0"
 }
