--- a/config.json
+++ b/config.json
@@ -52,11 +52,11 @@
   ],
   "images": [
     {
-      "uri": "https://raw.githubusercontent.com/lnbits/boltcards/main/static/image/1.png"
+      "uri": "https://raw.githubusercontent.com/lnbits/boltcards/main/static/image/1.jpg",
+      "link": "https://www.youtube.com/embed/_sW7miqaXJc?si=UlFX7yU2A_LkC70r"
     },
     {
-      "uri": "https://raw.githubusercontent.com/lnbits/boltcards/main/static/image/2.png",
-      "link": "https://www.youtube.com/watch?v=_sW7miqaXJc"
+      "uri": "https://raw.githubusercontent.com/lnbits/boltcards/main/static/image/1.png"
     },
     {
       "uri": "https://raw.githubusercontent.com/lnbits/boltcards/main/static/image/3.jpg"
