Added tut video

--- a/config.json
+++ b/config.json
@@ -56,6 +56,10 @@
       "link": "https://www.youtube.com/embed/_sW7miqaXJc?si=UlFX7yU2A_LkC70r"
     },
     {
+      "uri": "https://raw.githubusercontent.com/lnbits/boltcards/main/static/image/2.jpg",
+      "link": "https://www.youtube.com/embed/wJ7QLFTRjK0?si=DRNH9ycKZrCLjFcx"
+    },
+    {
       "uri": "https://raw.githubusercontent.com/lnbits/boltcards/main/static/image/1.png"
     },
     {
