[DEV-2572] change boltcards to dfxboltcards

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "repos": [
     {
-      "id": "boltcards",
-      "organisation": "lnbits",
+      "id": "dfxboltcards",
+      "organisation": "DFXswiss",
       "repository": "boltcards"
     }
   ]
