--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "name": "Bolt Cards",
-  "short_description": "Self custody Bolt Cards with one time LNURLw",
-  "tile": "/boltcards/static/image/boltcard.png",
+  "name": "DFX Bolt Cards",
+  "short_description": "Self custody DFX Bolt Cards with one time LNURLw",
+  "tile": "/dfxboltcards/static/image/boltcard.png",
   "min_lnbits_version": "0.12.5",
   "contributors": [
     {
@@ -52,21 +52,19 @@
   ],
   "images": [
     {
-      "uri": "https://raw.githubusercontent.com/lnbits/boltcards/main/static/image/1.jpg",
-      "link": "https://www.youtube.com/embed/_sW7miqaXJc?si=UlFX7yU2A_LkC70r"
+      "uri": "https://raw.githubusercontent.com/DFXswiss/boltcards/main/static/image/1.jpg"
     },
     {
-      "uri": "https://raw.githubusercontent.com/lnbits/boltcards/main/static/image/2.jpg",
-      "link": "https://www.youtube.com/embed/wJ7QLFTRjK0?si=DRNH9ycKZrCLjFcx"
+      "uri": "https://raw.githubusercontent.com/DFXswiss/boltcards/main/static/image/2.jpg"
     },
     {
-      "uri": "https://raw.githubusercontent.com/lnbits/boltcards/main/static/image/1.png"
+      "uri": "https://raw.githubusercontent.com/DFXswiss/boltcards/main/static/image/1.png"
     },
     {
-      "uri": "https://raw.githubusercontent.com/lnbits/boltcards/main/static/image/3.jpg"
+      "uri": "https://raw.githubusercontent.com/DFXswiss/boltcards/main/static/image/3.jpg"
     }
   ],
-  "description_md": "https://raw.githubusercontent.com/lnbits/boltcards/main/description.md",
-  "terms_and_conditions_md": "https://raw.githubusercontent.com/lnbits/boltcards/main/toc.md",
+  "description_md": "https://raw.githubusercontent.com/DFXswiss/boltcards/main/description.md",
+  "terms_and_conditions_md": "https://raw.githubusercontent.com/DFXswiss/boltcards/main/toc.md",
   "license": "MIT"
 }
