--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Alan Bits <alan@lnbits.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10 | ^3.9"
-lnbits = "*"
+lnbits = {version = "*", allow-prereleases = true}
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
@@ -14,7 +14,7 @@ pytest-asyncio = "^0.21.0"
 pytest = "^7.3.2"
 mypy = "^1.5.1"
 pre-commit = "^3.2.2"
-ruff = "^0.3.2"
+ruff = "^0.6.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
