--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,10 @@ name = "lnbits-boltcards"
 version = "0.0.0"
 description = "LNbits, free and open-source Lightning wallet and accounts system."
 authors = ["Alan Bits <alan@lnbits.com>"]
+package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.10 | ^3.9"
+python = "~3.12 | ~3.11 | ~3.10"
 lnbits = {version = "*", allow-prereleases = true}
 
 [tool.poetry.group.dev.dependencies]
